[gd_scene load_steps=3 format=3 uid="uid://ca0723gt87eb7"]

[ext_resource type="Script" path="res://ui/hardware_metrics/hardware_information.gd" id="1_bmt8n"]
[ext_resource type="LabelSettings" uid="uid://c5gh5a2ufjefn" path="res://ui/hardware_metrics/hardware_label_settings.tres" id="1_yfkj1"]

[node name="HardwareInformation" type="Control"]
process_mode = 3
process_priority = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_bmt8n")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -342.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="EngineVboxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 5

[node name="FPSLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "FPS:"
label_settings = ExtResource("1_yfkj1")

[node name="VsyncLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "VSYNC:"
label_settings = ExtResource("1_yfkj1")

[node name="MemoryLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MEMORY:"
label_settings = ExtResource("1_yfkj1")

[node name="OSLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "OS:"
label_settings = ExtResource("1_yfkj1")

[node name="DistroLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Distro:"
label_settings = ExtResource("1_yfkj1")

[node name="CPULabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CPU:"
label_settings = ExtResource("1_yfkj1")

[node name="GPULabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GPU:"
label_settings = ExtResource("1_yfkj1")
